# MyRustySandbox

./: .envrc.sample  .gitignore  Cargo.toml  README.md
.devcontainer/: Dockerfile  devcontainer-setup.sh
.github/workflows/: ci.yml  deploy.yml  promote.yml
axum-dependencies/: Cargo.toml
axum-testing/: Cargo.toml  README.me
axum-testing-dependancies/examples/: test_app.rs
axum-testing-dependancies/src/: lib.rs  test_app.rs
axum-testing/src/: lib.rs  state.rs  test_app.rs
devops/: .envrc.sample  Dockerfile
devops/chart-ms/: Chart.yaml  values.yaml  values_ai-dev.yaml  values_ai-stg.yaml
devops/chart-ms/grafana-alerts/: README.md
devops/chart-ms/grafana-dashboards/: README.md
devops/chart-ms/templates/: configmap-grafana-alerts.yaml  configmap-grafana-dashboards.yaml
examples/basic-axum-testing/: Cargo.toml
examples/basic-axum-testing/src/: lib.rs
src/: main.rs  settings.rs
src/routes/: mod.rs
src/service/: error.rs  state.rs
tests/: common-routes.rs
