[package]
name = "axum-testing"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.7.5"
axum-macros = "0.4.1"
clap = { version = "4", features = ["derive", "env"] }
http = "1.1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }

[dev-dependencies]
assert2 = "0.3"
once_cell = "1"
proptest = "1"
rstest = "0.21.0"
