[package]
name = "basic-axum-testing"
version = "0.1.0"
edition = "2021"
publish = false
license = ""        # FIXME

[dependencies]
axum = "0.7"
axum-macros = "0.4"
clap = { version = "4", features = ["derive", "env"] }
prometheus = "0.13.3"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
time = "0.3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = [
    "fmt",
    "env-filter",
    "json",
] }
uuid = { version = "1.7.0", features = ["v4"] }
validator = { version = "0.18", features = ["derive"] }

[dev-dependencies]
assert2 = "0.3"
once_cell = "1"
rstest = "0.21.0"
axum-testing = { path = "../../axum-testing"}